--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "watch": "watchify src/app.jsx -t babelify --outfile build/bundle.js",
-    "server": "python -m SimpleHTTPServer 8008",
+    "start": "python -m SimpleHTTPServer 8008",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "babelify": "^6.1.3",
     "browserify": "^11.0.0",
+    "immutable": "^3.7.4",
     "react": "^0.13.3",
     "rx": "^2.5.3",
     "watchify": "^3.3.0"
